Began testing virtustotal api calls